--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
     color: #000000;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Luckiest Guy', cursive;
 }
 p {
     color: #000000;
@@ -17,24 +17,24 @@ canvas{
 }
 .small{
     font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Luckiest Guy', cursive;
 }
 .largeR{
     float: right;
     text-align: right;
     font-size: 160%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Luckiest Guy', cursive;
 }
 .largeL{
     float: left;
     text-align: left;
     font-size: 160%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Luckiest Guy', cursive;
 }
 .large{
     text-align: left;
     font-size: 160%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Luckiest Guy', cursive;
 }
 .clearfix{
     clear:both
