--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ canvas{
   align: center;
   padding: 10px 25px;
   font-size: 18px;
+  font-family: 'Luckiest Guy', cursive;
   text-align: center;
   cursor: pointer;
   outline: none;
