--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ h1 {
 }
 p {
     color: #000000;
+    font-family: 'Luckiest Guy', cursive;
+}
+button {
+    color: #ffffff;
+    font-family: 'Luckiest Guy', cursive;
 }
 canvas{
     border: 3px solid black;
@@ -62,7 +67,6 @@ canvas{
   align: center;
   padding: 10px 25px;
   font-size: 18px;
-  font-family: 'Luckiest Guy', cursive;
   text-align: center;
   cursor: pointer;
   outline: none;
